<resources>
    <string name="app_name">DoctorsDiabeticApp</string>
    <string name="login">Logowanie</string>
    <string name="ifNoAcount">Założ konto:</string>
    <string name="registration">Zarejestruj</string>
    <string name="register">Rejestracja</string>
    <string name="name">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="email"> Email</string>
    <string name="loginTo">Zaloguj się</string>
    <string name="panel">Panel Obsługi</string>
    <string name="dane">Dane</string>
    <string name="opis">Opis</string>
    <string name="name_change">Imię:</string>
    <string name="surname_change">Nazwisko:</string>
    <string name="email_change">Email:</string>
    <string name="gender_change">Płeć</string>
    <string name="title_change">Tytuł:</string>
    <string name="phone_change">Telefon:</string>
    <string name="describe_change">Opis:</string>
    <string name="editing_data">Edycja danych</string>
    <!--    ToolBar-->
    <string name="setting_toolbar">Ustawienia</string>
    <string name="update_toolbar">Aktualizuj Dane</string>
    <string name="change_email_password_toolbar">Edytuj dane</string>
    <string name="add_photo_toolbar">Dodaj zdjięcie</string>
    <!--    Validation-->
    <string name="write_name">Należy wpisać imię</string>
    <string name="write_surname">Należy wpisać nazwisko</string>
    <string name="write_name_warning">Imie powinno zawierać tylko litery</string>
    <string name="write_surname_warning">Nazwisko powinno zawierać tylko litery</string>
    <string name="write_email">Wpisz swój email</string>
    <string name="write_email_warning">Wprowadzone znaki w emailu są nie poprawne</string>
    <string name="write_password">Wpisz hasło</string>
    <string name="write_password_warning">Hasło powinno zawierac duże i małe litery oraz cyfry i
        posiadać powyżej 8 znaków</string>
    <string name="wrong_something">Coś poszło nie tak spróbuj jeszcze raz</string>
    <string name="write_password_again">Wpisz ponownie hasło</string>
    <string name="write_password_again_warning">Wpisane hasło nie jest takie same</string>
    <string name="write_title">Wpisz swój tytuł naukowy lub tytuł określający twoją rolę</string>
    <string name="write_title_waring">Tytuł powinnien składac się z samych liter.</string>
    <string name="write_phone">Wpisz swój numer telefonu</string>
    <string name="write_phone_warning">Numer telefonu powinnien się składać z 9 cyfr lub
    dodatkowo z numerem kierunkowym zawartym w nawiasach</string>
    <string name="write_describe">Przedstaw się, uzupełnij swój opis o sobie</string>
    <string name="write_describe_warning">Opis powinien zawierać minimum 60 znaków</string>
    <string name="updata_fail">Aktualizacja danych nie powiodła się</string>
    <string name="success_updata">Dane zostały zapisane</string>
    <!-- Registration   -->
    <string name="registration_succesfull">Użytkownik został utworzony. Potwierdź rejestracje,
    klikając na link wysłany na mail.</string>
    <string name="correct_need_all">Należy uzupełnić wszystkie pola poprawnie</string>
    <string name="registration_fail">Rejestracja nie powiodła się, spróbuj jeszcze raz.</string>
    <!--    Sign in-->
    <string name="fail_sign_in">Niepoprawny email lub hasło</string>
    <string name="failure_sign_in">Logowanie zakończone niepowodzeniem, spróbuj jeszcze raz</string>
    <string name="email_check_verify">Sprawdz skrzynkę odbiorczą i zweryfikuj email</string>
    <!--    message box-->
    <string name="question_leave_app">Czy chcesz wyjść z aplikacji?</string>
    <string name="question_sign_out">Czy chcesz się wylogować?</string>
    <!--    Warning message-->
    <string name="warning_message">Należy uzupełnić wszystkie dane i zaaktualizować konto.
        Kliknij w to okienko lub wybierz w menu ustawienia. Po aktualizacji i zatwierdzeniu
        wprowadzonych danych odblokują się opcje.</string>
    <!--Menu-->
    <string name="message">Wiadomości</string>
    <string name="updata_account">Aktualizuj dane</string>
    <string name="setting">Ustawienia</string>
    <!--    Admin Panel-->
    <string name="admin_panel">Admin Panel</string>
    <string name="admin_describe">Panel admina służy do weryfikacji nowych kont Lekarzy oraz innych
        uprawnionych osób do konsultacji elektronicznej z pacjentami. Admin może dodawac
        nowych użytkowników oraz przydzielać rangę admina.</string>
    <string name="admin_add">Zweryfikuj nowych użytkowników</string>
    <string name="admin_view_users">Przęgląd zweryfikowanych użytkowników</string>
    <string name="admin_add_admin">Dodaj nowego admina</string>

    <!--    Spinner Gender-->
    <string-array name="spinner_items_gender">
        <item>Kobieta</item>
        <item>Mężczyzna</item>
    </string-array>
    <string name="commit">Zatwierdź</string>
    <!--    Settings-->
    <string name="update_setting">Zaaktualizuj dane</string>
    <string name="change_password_email_setting">Zmień adress E-mail lub hasło</string>
    <string name="add_photo_setting">Dodaj zdjięcie</string>
    <!--    Message-->
    <string name="empty_message_send">Nie można wysłać pustej wiadomości</string>
    <!--    Activity ChangeEmailPassword -->
    <string name="password_update">Hasło zostało zmienione! Zaloguj się ponownie do aplikacji.
    </string>
    <string name="password_update_fail">Hasło nie zostało zmienione, coś poszło nie tak!</string>
    <string name="password_current_fail">Wpisane hasło jest niepoprawne, spróbuj jeszcze raz
    </string>
    <string name="email_upadate">Email został zmieniony! Należy potwierdzić na mailu nowy adress
    i zalogowac się ponownie.</string>
    <string name="email_update_fail">Email nie został zmieniony, coś poszło nie tak!</string>
    <string name="empty_EditText">Należy uzupełnić wszystkie pola!</string>
    <!--    -->
    <string name="image_icon_description">image icon</string>
    <string name="add_or_update_photo">Dodaj lub aktualizuj zdjęcie</string>
    <string name="add_picture_fail">Dodawanie zdjęcia nie powiodło się.</string>
    <string name="add_image_success">Obraz został pomyślnie dodany</string>
    <string name="add_image_fail">Dodawanie obrazu nie powiodło się</string>
    <string name="add_image_cancel">Dodawanie obrazu zostało anulowane</string>
    <string name="add_photo_string">Dodaj zdjęcie</string>
    <string name="admin_fail_login_passw_or_verif">Nie poprawne hasło lub konto jeszcze nie zweryfikowane</string>
    <string name="signIn_admin">Zaloguj się jako Admin</string>
    <string name="verified_users_string">Zweryfikowani użytkownicy</string>
    <string name="unverification_users_string">Nie zweryfikowani użytkownicy</string>

</resources>
