<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textSize="32dp"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="252dp"
        android:id="@+id/login_button"
        android:textStyle="bold"
        android:background="@drawable/button"
        android:padding="15dp"
        android:text="@string/login"
        android:textSize="18dp" />

    <RelativeLayout
        android:id="@+id/czat_bottom_send_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:id="@+id/create_acount_text"
            android:text="@string/ifNoAcount"
            android:textColor="@color/black"
            android:textSize="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRegister"
            android:text="@string/register"
            android:textSize="20dp"
            android:textColor="@color/button"
            android:textStyle="bold"
            android:layout_marginRight="15dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="12dp"
            android:layout_toRightOf="@+id/create_acount_text"/>


    </RelativeLayout>

</RelativeLayout>