<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_ver2"
    tools:context=".CompletionDataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/top_bar" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alignmentMode="alignMargins"
                        android:columnCount="1"
                        android:columnOrderPreserved="false"
                        android:rowCount="1">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardView_Main"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_rowWeight="1"
                            android:layout_columnWeight="1"
                            android:layout_margin="12dp"
                            app:cardCornerRadius="12dp"
                            app:cardElevation="6dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:padding="5dp">

                                    <ImageView
                                        android:layout_width="50dp"
                                        android:layout_height="50dp"
                                        android:src="@drawable/profile_image_icon_men" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginLeft="5dp"
                                        android:text="@string/name_change"
                                        android:textColor="@color/black"
                                        android:textSize="18dp" />

                                    <EditText
                                        android:id="@+id/edit_Name"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:padding="5dp">

                                    <ImageView
                                        android:layout_width="50dp"
                                        android:layout_height="50dp"
                                        android:src="@drawable/profile_image_icon_men" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginLeft="5dp"
                                        android:text="@string/surname_change"
                                        android:textColor="@color/black"
                                        android:textSize="18dp" />

                                    <EditText
                                        android:id="@+id/edit_Surname"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:padding="5dp">

                                    <ImageView
                                        android:layout_width="50dp"
                                        android:layout_height="50dp"
                                        android:src="@drawable/gender_icon_2" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginLeft="5dp"
                                        android:text="@string/gender_change"
                                        android:textColor="@color/black"
                                        android:textSize="18dp" />

                                    <Spinner
                                        android:id="@+id/spinner_gender"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:entries="@array/spinner_items_gender" />

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:padding="5dp">

                                    <ImageView
                                        android:layout_width="50dp"
                                        android:layout_height="50dp"
                                        android:src="@drawable/title_icon" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginLeft="5dp"
                                        android:text="@string/title_change"
                                        android:textColor="@color/black"
                                        android:textSize="18dp" />

                                    <EditText
                                        android:id="@+id/edit_Title"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:padding="5dp">

                                    <ImageView
                                        android:layout_width="50dp"
                                        android:layout_height="50dp"
                                        android:src="@drawable/phone_icon" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginLeft="5dp"
                                        android:text="@string/phone_change"
                                        android:textColor="@color/black"
                                        android:textSize="18dp" />

                                    <EditText
                                        android:id="@+id/edit_Phone"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:padding="5dp">

                                    <ImageView
                                        android:layout_width="50dp"
                                        android:layout_height="50dp"
                                        android:layout_gravity="center"
                                        android:src="@drawable/profile_image_icon_men" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginLeft="5dp"
                                        android:text="@string/describe_change"
                                        android:textColor="@color/black"
                                        android:textSize="18dp" />

                                    <EditText
                                        android:id="@+id/edit_Describe"
                                        android:layout_width="match_parent"
                                        android:layout_height="160dp" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <Button
                                        android:id="@+id/Commit_Change_button"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_margin="50dp"
                                        android:background="@drawable/button"
                                        android:padding="6dp"
                                        android:text="@string/commit"
                                        android:textColor="@color/black"
                                        android:textSize="20dp" />
                                </LinearLayout>
                            </LinearLayout>

                        </androidx.cardview.widget.CardView>
                    </GridLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>